# pg_replication

./: Cargo.toml  docker-compose.yml
consumer/: Cargo.toml
consumer/src/: basic_consumer.rs  db.rs  kafka_concurrent_consumer.rs  kafka_consumer.rs  lib.rs
consumer/src/idempotent_consumer/: mod.rs  state.rs
producer/: Cargo.toml
producer/src/: error.rs  kafka_producer.rs  lib.rs  util.rs
producer/src/util/: task.rs
producer/tests/: kafka_producer.rs
replication/: Cargo.toml
replication/src/: kafka_producer.rs  lib.rs  util.rs
