[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
rdkafka.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
uuid.workspace = true
sha2.workspace = true
hkdf.workspace = true
model.workspace = true

producer.workspace = true
