[package]
name = "replication"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
openssl.workspace = true
tokio-postgres.workspace = true
postgres-protocol.workspace = true
postgres-openssl.workspace = true
lazy_static.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rdkafka.workspace = true
tokio.workspace = true
